--- a/app/src/main/res/layout/routine.xml
+++ b/app/src/main/res/layout/routine.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,15 +12,16 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="390dp">
 
         <EditText
             android:id="@+id/text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="382dp"
             android:ems="10"
             android:hint="Routine description"
-            android:inputType="text|number" />
+            android:inputType="textMultiLine"
+            android:textAlignment="center" />
 
     </TableRow>
 
