--- a/app/src/main/res/layout/planche.xml
+++ b/app/src/main/res/layout/planche.xml
@@ -81,9 +81,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textSize="18sp"
         android:inputType="textPersonName"
-        android:text="Negative" />
+        android:text="Pike push up"
+        android:textSize="18sp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -102,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="time (sec)"
+            android:hint="repetition"
             android:inputType="number" />
 
     </TableRow>
