--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -47,5 +47,17 @@
                 android:title="Timer" />
         </menu>
     </item>
+    <item android:title="Progression">
+        <menu>
+            <item
+                android:id="@+id/routine"
+                android:icon="@mipmap/planche_fg"
+                android:title="Workout routine" />
+            <item
+                android:id="@+id/timer"
+                android:icon="@mipmap/ic_timer_foreground"
+                android:title="Timer" />
+        </menu>
+    </item>
 
 </menu>
