--- a/app/src/main/res/layout/back.xml
+++ b/app/src/main/res/layout/back.xml
@@ -109,14 +109,18 @@
 
     <Button
         android:id="@+id/button2"
+        android:background="@drawable/loadbuttonstyle"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Load" />
 
     <Button
         android:id="@+id/button"
+        android:background="@drawable/loadbuttonstyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="Save" />
 
 </LinearLayout>
