--- a/app/src/main/res/layout/triceps.xml
+++ b/app/src/main/res/layout/triceps.xml
@@ -80,12 +80,16 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/loadbuttonstyle"
+        android:layout_margin="5dp"
         android:text="Load" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/loadbuttonstyle"
+        android:layout_margin="5dp"
         android:text="Save" />
 
 </LinearLayout>
