--- a/app/src/main/res/layout/back.xml
+++ b/app/src/main/res/layout/back.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+        <Switch
+            android:id="@+id/switch2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:checked="false"
+            android:showText="true"
+            android:textAlignment="center"
+            android:textOff="Max"
+            android:textOn="Power"
+            android:textSize="24sp"
+            android:thumbTextPadding="10dp"
+            tools:checked="false" />
 
     <TextView
         android:id="@+id/exercise"
@@ -122,5 +146,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Save" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
